; ModuleID = '/home/carl/AnghaBench/git/extr_combine-diff.c_interesting.c'
source_filename = "/home/carl/AnghaBench/git/extr_combine-diff.c_interesting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sline = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sline*, i64)* @interesting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @interesting(%struct.sline* %0, i64 %1) #0 {
  %3 = alloca %struct.sline*, align 8
  %4 = alloca i64, align 8
  store %struct.sline* %0, %struct.sline** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.sline*, %struct.sline** %3, align 8
  %6 = getelementptr inbounds %struct.sline, %struct.sline* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = and i64 %7, %8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %2
  %12 = load %struct.sline*, %struct.sline** %3, align 8
  %13 = getelementptr inbounds %struct.sline, %struct.sline* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %11, %2
  %17 = phi i1 [ true, %2 ], [ %15, %11 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
